--- a/places/pubspec.yaml
+++ b/places/pubspec.yaml
@@ -12,11 +12,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.0
+  cupertino_icons: 1.0.0
 
+  flutter_svg: 0.19.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 flutter:
 
