--- a/places/pubspec.yaml
+++ b/places/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   cupertino_icons: 1.0.0
 
   flutter_svg: 0.19.1
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -24,3 +24,6 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
+
+assets:
+  - resources/
